--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,3 @@
-<<<<<<< HEAD
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# Netbeans specifics :
-build/
-dist/
-nbproject/private
-/MyLibrary/nbproject/private/
-=======
 # Compiled class file
 *.class
 
@@ -56,4 +26,8 @@ build/
 dist/
 nbproject/private
 project.properties
->>>>>>> master
+
+/MyLibrary/nbproject/private
+/MyLibrary/nbproject/build/
+/MyLibrary/nbproject/dist/
+/MyLibrary/nbproject/project.properties
