--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,9 @@ hs_err_pid*
 build/
 dist/
 nbproject/private
-project.properties
+#project.properties
 
 /MyLibrary/nbproject/private
 /MyLibrary/nbproject/build/
 /MyLibrary/nbproject/dist/
-/MyLibrary/nbproject/project.properties
+#/MyLibrary/nbproject/project.properties
