remove temp word file

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ nbproject/private
 /MyLibrary/nbproject/build/
 /MyLibrary/nbproject/dist/
 #/MyLibrary/nbproject/project.properties
+~\$ckOffice_Functions\.docx
