--- a/MyLibrary/nbproject/project.properties
+++ b/MyLibrary/nbproject/project.properties
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.SQLS.classpath}
+    ${libs.SQLS.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
