--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,5 @@ nbproject/private
 /MyLibrary/nbproject/private
 /MyLibrary/nbproject/build/
 /MyLibrary/nbproject/dist/
-#/MyLibrary/nbproject/project.properties
+/MyLibrary/nbproject/project.properties
 ~\$ckOffice*
