--- a/MyLibrary/nbproject/project.properties
+++ b/MyLibrary/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/MyLibrary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.SQLS.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
