--- a/MyLibrary/nbproject/project.properties
+++ b/MyLibrary/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 
+file.reference.jdatepicker-1.3.4.jar=jdatepicker-1.3.4.jar
 file.reference.jdatepicker-1.3.4.jar-1=lib\\jdatepicker-1.3.4.jar
 includes=**
 jar.compress=false
@@ -37,7 +38,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.SQLS.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.jdatepicker-1.3.4.jar-1}
+    ${file.reference.jdatepicker-1.3.4.jar-1}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
