--- a/MyLibrary/nbproject/project.properties
+++ b/MyLibrary/nbproject/project.properties
@@ -31,13 +31,17 @@ endorsed.classpath=
 excludes=
 
 file.reference.jdatepicker-1.3.4.jar-1=lib\\jdatepicker-1.3.4.jar
+file.reference.jdatepicker-1.3.4.jar-2=lib\\jdatepicker-1.3.4.jar
+file.reference.MyLibrary-lib=lib\\
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.SQLS.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.jdatepicker-1.3.4.jar-1}
+    ${file.reference.jdatepicker-1.3.4.jar-1}:\
+    ${file.reference.MyLibrary-lib}:\
+    ${file.reference.jdatepicker-1.3.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
