--- a/MyLibrary/nbproject/project.properties
+++ b/MyLibrary/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.classpath=\
     ${libs.SQLS.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.jdatepicker-1.3.4.jar-1}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.jdatepicker-1.3.4.jar}
     ${file.reference.MyLibrary-lib}:\
     ${file.reference.jdatepicker-1.3.4.jar-2}
 =======
