--- a/MyLibrary/nbproject/project.properties
+++ b/MyLibrary/nbproject/project.properties
@@ -42,7 +42,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.jdatepicker-1.3.4.jar-1}:\
     <<<<<<< HEAD:\
-    ${file.reference.jdatepicker-1.3.4.jar}
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar-2}
     ${file.reference.MyLibrary-lib}:\
     ${file.reference.jdatepicker-1.3.4.jar-2}
 =======
