--- a/MyLibrary/nbproject/project.properties
+++ b/MyLibrary/nbproject/project.properties
@@ -31,8 +31,6 @@ endorsed.classpath=
 excludes=
 
 file.reference.jdatepicker-1.3.4.jar=jdatepicker-1.3.4.jar
-file.reference.jdatepicker-1.3.4.jar-1=lib\\jdatepicker-1.3.4.jar
-file.reference.jdatepicker-1.3.4.jar-2=lib\\jdatepicker-1.3.4.jar
 file.reference.MyLibrary-lib=lib\\
 includes=**
 jar.compress=false
@@ -40,9 +38,7 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.SQLS.classpath}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.jdatepicker-1.3.4.jar-1}:\
-    ${file.reference.jdatepicker-1.3.4.jar}:\
-    ${file.reference.jdatepicker-1.3.4.jar-2}
+    ${file.reference.jdatepicker-1.3.4.jar}
     ${file.reference.MyLibrary-lib}:\
     ${file.reference.jdatepicker-1.3.4.jar-2}
 =======
