--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ nbproject/private
 /MyLibrary/nbproject/dist/
 /MyLibrary/nbproject/project.properties
 ~\$ckOffice*
+/www01/nbproject/private/
+/LibrairieHTML/nbproject/private/
