--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ nbproject/private
 ~\$ckOffice*
 /www01/nbproject/private/
 /LibrairieHTML/nbproject/private/
+/exercice2/nbproject/private/
+/Exercice3/nbproject/private/
