--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,8 @@
 hs_err_pid*
 
 # Netbeans specifics :
-build/
-dist/
-private/
+**/build/
+**/dist/
+**/private/
 project.properties
 ~\$ckOffice*
